--- a/projects/app/src/styles.css
+++ b/projects/app/src/styles.css
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@shoelace-style/shoelace/dist/themes/dark.css";
+
+input.form-input {
+  @apply px-3 py-1.5 text-inherit
+        bg-neutral-900
+        rounded border border-solid border-gray-700
+        transition ease-in-out
+        focus:border-sky-500 focus:ring-sky-500 focus:ring-opacity-50 focus:ring-2 focus:outline-none;
+}
+
+input.ng-invalid.ng-touched:focus {
+  @apply border-rose-500 ring-rose-500 ring-2 ring-opacity-50;
+}
