--- a/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
+++ b/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
@@ -1,19 +1,27 @@
 <div>
-    <h1 class="text-5xl">Add Movie</h1>
-    <div class="max-w-5xl bg-black my-10 mx-auto p-5 rounded-md">
-      <form [formGroup]="searchForm" (ngSubmit)="onSearchMovie()">
-        <div class="flex flex-row items-center space-x-2">
-          <input
-            type="text"
-            class="form-input flex-grow"
-            formControlName="movieTitle"
-            id="movieTitle"
-            placeholder="Movie Title"
-          />
-          <sl-button type="submit" variant="primary">Get Info</sl-button>
-        </div>
-      </form>
-    </div>
-  
-    <!-- Display Results -->
+  <h1 class="text-5xl">Search Movie</h1>
+  <div class="max-w-5xl bg-black my-10 mx-auto p-5 rounded-md">
+    <form [formGroup]="searchForm" (ngSubmit)="onSearchMovie()">
+      <div class="flex flex-row items-center space-x-2">
+        <input
+          type="text"
+          class="form-input flex-grow"
+          formControlName="movieTitle"
+          id="movieTitle"
+          placeholder="Movie Title"
+        />
+        <sl-button type="submit" variant="primary">Get Info</sl-button>
+      </div>
+    </form>
   </div>
+
+  <!-- Display Results -->
+  <div class="bg-amber-900 max-w-6xl mx-auto columns-auto" *ngIf="searchResults != undefined">
+    <app-search-movie-item
+      class="w-1/4 m-10"
+      *ngFor="let item of searchResults"
+      [resultItem]="item"
+    >
+    </app-search-movie-item>
+  </div>
+</div>
