--- a/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
+++ b/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
@@ -16,9 +16,9 @@
   </div>
 
   <!-- Display Results -->
-  <div class="bg-amber-900 max-w-6xl mx-auto columns-auto" *ngIf="searchResults != undefined">
+  <div class="max-w-5xl mx-auto" *ngIf="searchResults != undefined">
     <app-search-movie-item
-      class="w-1/4 m-10"
+      class="m-5"
       *ngFor="let item of searchResults"
       [resultItem]="item"
     >
