--- a/projects/app/src/app/app.component.html
+++ b/projects/app/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-search-movie></app-search-movie>
+<!-- <app-search-movie></app-search-movie> -->
+<app-manage-add-movie></app-manage-add-movie>
