--- a/projects/app/src/app/manage-movie/manage-add-movie/manage-add-movie.component.html
+++ b/projects/app/src/app/manage-movie/manage-add-movie/manage-add-movie.component.html
@@ -1,1 +1,30 @@
-<p>manage-add-movie works!</p>>
+<div class="container mx-auto bg-neutral-900 rounded-t-2xl overflow-y-hidden">
+  
+  <div class="h-96 bg-no-repeat bg-fixed bg-center bg-cover bg-[url({{ backdropImageUrl }})]">
+    <div class="h-96 bg-gradient-to-t from-neutral-900 via-transparent items-end">
+    </div>
+  </div>
+  
+  <div class="relative h-96 px-12">
+
+    <div class="absolute top-0 left-0 -mt-56 px-12 flex flex-row items-end min-w-full space-x-5">
+      <img class="rounded-md w-48 h-72 object-cover" src="{{ posterImageUrl }}" />
+      <div class="flex flex-grow justify-center pb-12">
+        <span class="text-3xl italic">"{{ tmdbMovieDetails?.tagline }}"</span>
+      </div>
+    </div>
+
+    <div class="absolute mt-20 px-12">
+      <span class="text-5xl">{{ tmdbMovieDetails?.title }}</span>
+      <br />
+      Status: {{ tmdbMovieDetails?.status }} <br />
+      Release Date: {{ tmdbMovieDetails?.release_date }} <br /> 
+      Runtime: {{ tmdbMovieDetails?.runtime }} <br />
+      Genre: <br />
+      <br />
+      Overview: {{ tmdbMovieDetails?.overview }} <br />
+      
+    </div>
+
+  </div>
+</div>
