--- a/projects/app/src/app/manage-movie/manage-add-movie/manage-add-movie.component.html
+++ b/projects/app/src/app/manage-movie/manage-add-movie/manage-add-movie.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto bg-neutral-900 rounded-t-2xl overflow-y-hidden">
-  
-  <div class="h-96 bg-no-repeat bg-fixed bg-center bg-cover bg-[url({{ backdropImageUrl }})]">
+  <!-- http://image.tmdb.org/t/p/w1280/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg bg-[url({{ backdropImageUrl }})] -->
+  <div class="h-96 bg-no-repeat bg-fixed bg-center bg-cover" style="background: url({{backdropImageUrl}})">
     <div class="h-96 bg-gradient-to-t from-neutral-900 via-transparent items-end">
     </div>
   </div>
