--- a/projects/app/src/app/manage-movie/manage-add-movie/manage-add-movie.component.html
+++ b/projects/app/src/app/manage-movie/manage-add-movie/manage-add-movie.component.html
@@ -1,30 +1,46 @@
 <div class="container mx-auto bg-neutral-900 rounded-t-2xl overflow-y-hidden">
+  
   <!-- http://image.tmdb.org/t/p/w1280/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg bg-[url({{ backdropImageUrl }})] -->
-  <div class="h-96 bg-no-repeat bg-fixed bg-center bg-cover" style="background: url({{backdropImageUrl}})">
+  <div class="h-96 bg-no-repeat bg-fixed bg-center bg-cover" style="background:fixed top no-repeat url({{backdropImageUrl}})">
     <div class="h-96 bg-gradient-to-t from-neutral-900 via-transparent items-end">
     </div>
   </div>
   
-  <div class="relative h-96 px-12">
+  <!-- Poster and Tagline -->
+  <div class="top-96 mx-12 -mt-56 flex items-end space-x-5">
+    <img class="rounded-md w-48 h-72 object-cover" src="{{ posterImageUrl }}" />
+    <div class="basis-full text-center pb-12">
+      <span class="text-neutral-400 text-3xl italic">"{{ tmdbMovieDetails?.tagline }}"</span>
+    </div>
+  </div>
 
-    <div class="absolute top-0 left-0 -mt-56 px-12 flex flex-row items-end min-w-full space-x-5">
-      <img class="rounded-md w-48 h-72 object-cover" src="{{ posterImageUrl }}" />
-      <div class="flex flex-grow justify-center pb-12">
-        <span class="text-3xl italic">"{{ tmdbMovieDetails?.tagline }}"</span>
+  <!-- Title and other Movie Details -->
+  <div class="mx-12">
+    <span class="text-5xl block text-center mb-12">{{ tmdbMovieDetails?.title }}</span>
+
+    <div class="bg-black block -mx-12 px-12 py-5 text-center">
+      Status: {{ tmdbMovieDetails?.status }} 
+      Runtime: {{ tmdbMovieDetails?.runtime }} <br />
+      Release Date: {{ tmdbMovieDetails?.release_date }} <br /> 
+      <div class="items-center space-x-2">
+        Genre: 
+        <sl-tag pill="true" variant="danger">hello</sl-tag>
+        <sl-tag pill="true" variant="danger">hello</sl-tag>
+        <sl-tag pill="true" variant="danger">hello</sl-tag>
       </div>
+    
     </div>
 
-    <div class="absolute mt-20 px-12">
-      <span class="text-5xl">{{ tmdbMovieDetails?.title }}</span>
-      <br />
-      Status: {{ tmdbMovieDetails?.status }} <br />
-      Release Date: {{ tmdbMovieDetails?.release_date }} <br /> 
-      Runtime: {{ tmdbMovieDetails?.runtime }} <br />
-      Genre: <br />
-      <br />
-      Overview: {{ tmdbMovieDetails?.overview }} <br />
-      
+    <br />
+    <span class="text-xl italic block">Overview:</span>
+    {{ tmdbMovieDetails?.overview }} <br />
+    
+    <div class="text-center my-12">
+      <sl-button class="w-2/4" variant="success">
+        <span class="uppercase">Add Movie</span>
+      </sl-button>
     </div>
 
   </div>
+
 </div>
