--- a/projects/app/src/app/manage-movie/search-movie-item/search-movie-item.component.html
+++ b/projects/app/src/app/manage-movie/search-movie-item/search-movie-item.component.html
@@ -13,11 +13,11 @@
       <div class="flex flex-row">
         <div class="flex-grow">
           <p class="text-2xl font-semibold">{{ resultItem.title }}</p>
-          <p class="text-sm">
-            <sl-icon name="calendar3"></sl-icon>: {{ resultItem.release_date }}
+          <p class="text-sm items-center">
+            <sl-icon name="calendar3"></sl-icon> {{ resultItem.release_date }}
           </p>
         </div>
-        <sl-button class="justify-self-end" slot="footer" variant="success">
+        <sl-button class="justify-self-end" slot="footer" variant="success" outline (click)="onAddMovie()">
           <span class="uppercase">+ Add Movie</span>
         </sl-button>
       </div>
