initial layout of navbar

--- a/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
+++ b/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="container mx-auto">
   <h1 class="text-5xl">Search Movie</h1>
-  <div class="max-w-5xl bg-black my-10 mx-auto p-5 rounded-md">
+  <div class="bg-black my-10 p-5 rounded-md">
     <form [formGroup]="searchForm" (ngSubmit)="onSearchMovie()">
       <div class="flex flex-row items-center space-x-2">
         <input
