added routing for movies and search page

--- a/projects/app/src/app/app.component.html
+++ b/projects/app/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-navbar></app-navbar>
-<app-search-movie></app-search-movie>
-<!-- <app-manage-add-movie></app-manage-add-movie> -->
+<div class="container mx-auto">
+    <!-- <router-outlet></router-outlet> -->
+    <app-search-movie></app-search-movie>
+    <!-- <app-manage-add-movie></app-manage-add-movie> -->
+</div>
