--- a/projects/app/src/app/manage-movie/manage-movie.component.html
+++ b/projects/app/src/app/manage-movie/manage-movie.component.html
@@ -1,8 +1,6 @@
-<div>
-  <h1 class="text-5xl">Manage Movie</h1>
-  <div class="container mx-auto py-10">
-    <sl-button>Add Movie</sl-button>
-    <sl-button>Edit Movie</sl-button>
-    <sl-button>Delete Movie</sl-button>
-  </div>
+<h1 class="text-5xl">Manage Movie</h1>
+<div class="container mx-auto py-10">
+  <sl-button (click)="onSearch()">Search Movie</sl-button>
+  <sl-button>Edit Movie</sl-button>
+  <sl-button>Delete Movie</sl-button>
 </div>
