--- a/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
+++ b/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-5xl">Search Movie</h1>
+<h1 class="text-3xl">Search Movie</h1>
 <div class="bg-black my-10 p-5 rounded-md">
   <form [formGroup]="searchForm" (ngSubmit)="onSearchMovie()">
     <div class="flex flex-row items-center space-x-2">
@@ -14,11 +14,6 @@
   </form>
 </div>
 
-<!-- Pages -->
-<div>
-  <app-pagination></app-pagination>
-</div>
-
 <!-- Display Results -->
 <div
   class="max-w-5xl mx-auto flex flex-col space-y-3"
@@ -28,4 +23,13 @@
   </app-search-movie-item>
 </div>
 
-
+<!-- Pages -->
+<div class="my-10">
+  <app-pagination
+    [maxPage]="maxPage"
+    [currentPage]="currentPage"
+    [windowCount]="2"
+    (onPageItemClick)="onPagedSearchMovie($event)"
+    *ngIf="searchResults != undefined"
+  ></app-pagination>
+</div>
