initial display ov movies and routerLink functionality

--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="bg-black py-1">
   <div class="container mx-auto px-5 flex flex-wrap justify-between items-center">
     <span class="flex-none text-xl text-white font-semibold">
-      Gala Web
+      <a routerLink="/movies">Gala Web</a>
     </span>
 
     <!-- Button toggle -->
