--- a/projects/app/src/app/navbar/navbar-menu-item/navbar-menu-item.component.html
+++ b/projects/app/src/app/navbar/navbar-menu-item/navbar-menu-item.component.html
@@ -8,7 +8,7 @@
       'text-white': isActive,
       'text-gray-400 hover:bg-gray-700': !isActive
     }"
-    href="#"
+    routerLink="/movies"
   >
     <ng-content></ng-content>
   </a>
