--- a/projects/app/src/app/manage-movie/manage-movie.component.html
+++ b/projects/app/src/app/manage-movie/manage-movie.component.html
@@ -8,8 +8,8 @@
 
 <!-- Display selected movies -->
 <div
+  class="max-w-5xl mx-auto flex flex-col space-y-3"
   *ngIf="movies != null && movies.length > 0"
-  class="flex flex-row space-x-5"
 >
   <app-movie-item
     *ngFor="let item of movies"
