--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -6,8 +6,7 @@
 
     <!-- Button toggle -->
     <button type="button"
-            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-            aria-controls="navbar-default" aria-expanded="false">
+            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
       <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd"
               d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
@@ -20,7 +19,8 @@
     <div class="w-full md:block md:w-auto">
       <ul class="flex flex-col mt-4 md:flex-row md:space-x-5 md:mt-0">
         <app-navbar-menu-item [isActive]="true">Home</app-navbar-menu-item>
-        <app-navbar-menu-item [isActive]="false">Menu 2</app-navbar-menu-item>
+        <app-navbar-menu-item [isActive]="false">Movies</app-navbar-menu-item>
+        <app-navbar-menu-item [isActive]="false">Theaters</app-navbar-menu-item>
       </ul>
     </div>
   </div>
