--- a/projects/app/src/app/manage-theater/manage-theater.component.html
+++ b/projects/app/src/app/manage-theater/manage-theater.component.html
@@ -1,1 +1,6 @@
-<p>manage-theater works!</p>
+<span class="text-3xl">Theaters</span>
+
+<div class="flex flex-row space-x-3 mt-5">
+    <sl-button type="button" (click)="addTheaterHandler($event)">Add</sl-button>
+    <sl-button type="button">Edit</sl-button>
+</div>
