--- a/projects/app/src/app/app.component.html
+++ b/projects/app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 <div class="container mx-auto my-10 px-5">
-    <!-- <router-outlet></router-outlet> -->
-    <app-add-theater></app-add-theater>
+    <router-outlet></router-outlet>
+    <!-- <app-add-theater></app-add-theater> -->
 </div>
