renamed theater to cinema

--- a/projects/app/src/app/manage-cinema/add-cinema/add-cinema.component.html
+++ b/projects/app/src/app/manage-cinema/add-cinema/add-cinema.component.html
@@ -1,4 +1,4 @@
-<span class="text-3xl">Add Theater</span>
+<span class="text-3xl">Add Cinema</span>
 
 <div class="max-w-md mx-auto m-10">
   <form class="flex flex-col space-y-2" #targetForm>
