--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
       <ul class="flex flex-col mt-4 md:flex-row md:space-x-5 md:mt-0">
         <app-navbar-menu-item [isActive]="true" routePath="/movies">Home</app-navbar-menu-item>
         <app-navbar-menu-item [isActive]="false" routePath="/movies">Movies</app-navbar-menu-item>
-        <app-navbar-menu-item [isActive]="false" routePath="/theaters">Theaters</app-navbar-menu-item>
+        <app-navbar-menu-item [isActive]="false" routePath="/cinemas">Cinemas</app-navbar-menu-item>
       </ul>
     </div>
   </div>
