--- a/projects/app/src/app/manage-cinema/manage-cinema.component.html
+++ b/projects/app/src/app/manage-cinema/manage-cinema.component.html
@@ -1,6 +1,19 @@
 <span class="text-3xl">Cinemas</span>
 
-<div class="flex flex-row space-x-3 mt-5">
-    <sl-button type="button" (click)="addCinemaHandler($event)">Add</sl-button>
-    <sl-button type="button">Edit</sl-button>
+<div class="flex flex-col my-5 space-y-4 max-w-md">
+  <!-- add cinema block -->
+  <sl-card class="add-new-cinema w-full" (click)="addCinemaHandler($event)">
+    <div class="flex flex-row text-center items-center justify-center">
+      <sl-icon name="plus-circle-fill" class="m-2"></sl-icon>
+      Add New Cinema
+    </div>
+  </sl-card>
+
+  <!-- display cinema list -->
+  <ul class="space-y-4">
+    <li *ngFor="let item of cinemas">
+      <app-cinema-item [cinemaItem]="item"></app-cinema-item>
+    </li>
+  </ul>
+  
 </div>
