added component for adding new cinema

--- a/projects/app/src/app/manage-cinema/cinema-item/cinema-item.component.html
+++ b/projects/app/src/app/manage-cinema/cinema-item/cinema-item.component.html
@@ -1,7 +1,7 @@
 <sl-card class="w-full">
   <div class="flex flex-row space-x-5 items-center">
     <div class="basis-10/12">
-      <sl-icon name="camera-reels-fill" class="mr-2"></sl-icon>
+      <sl-icon name="house-door-fill" class="mr-2 text-xl"></sl-icon>
       {{ cinemaItem.name }}
     </div>
     <div class="flex flex-row space-x-2">
