--- a/projects/app/src/app/app.component.html
+++ b/projects/app/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-navbar></app-navbar>
-<div class="container mx-auto my-10 px-5">
+<header>
+  <app-navbar></app-navbar>
+</header>
+<main>
+  <div class="container mx-auto my-10 px-5">
     <router-outlet></router-outlet>
-</div>
+  </div>
+</main>
