--- a/projects/app/src/app/manage-cinema/manage-cinema.component.html
+++ b/projects/app/src/app/manage-cinema/manage-cinema.component.html
@@ -1,13 +1,9 @@
 <span class="text-3xl">Cinemas</span>
 
-<div class="flex flex-col my-5 space-y-4 max-w-md">
+<div class="flex flex-col my-5 space-y-4">
+  
   <!-- add cinema block -->
-  <sl-card class="add-new-cinema w-full" (click)="addCinemaHandler($event)">
-    <div class="flex flex-row text-center items-center justify-center">
-      <sl-icon name="plus-circle-fill" class="m-2"></sl-icon>
-      Add New Cinema
-    </div>
-  </sl-card>
+  <app-new-cinema-block></app-new-cinema-block>
 
   <!-- display cinema list -->
   <ul class="space-y-4">
