added new cinema room block for adding new rooms

--- a/projects/app/src/app/cinemas-page/new-cinema-room-block/new-cinema-room-block.component.css
+++ b/projects/app/src/app/cinemas-page/new-cinema-room-block/new-cinema-room-block.component.css
@@ -3,7 +3,7 @@ div.default-style {
     border-width: 1px;
 }
 
-/** with add-item class */
+/** with add-new-item class */
 
 div.add-new-item {
     @apply border-gray-500 border-dashed cursor-pointer
