--- a/projects/app/src/app/cinemas-page/edit-cinema/edit-cinema.component.html
+++ b/projects/app/src/app/cinemas-page/edit-cinema/edit-cinema.component.html
@@ -20,12 +20,18 @@
   </form>
 </div>
 
-<div class="mt-10">
+<div class="flex flex-col my-5 space-y-4 mt-10">
   Cinema Rooms:
+
+  <!-- new cinema room block -->
+  <app-new-cinema-room-block></app-new-cinema-room-block>
+
   <!-- Display List of rooms -->
   <ul class="space-y-4">
     <li *ngFor="let item of cinema?.cinemaRooms">
       <app-cinema-room-item [cinemaRoomItem]="item"></app-cinema-room-item>
     </li>
   </ul>
+
+
 </div>
