--- a/projects/app/src/app/cinemas-page/cinema-room-item/cinema-room-item.component.html
+++ b/projects/app/src/app/cinemas-page/cinema-room-item/cinema-room-item.component.html
@@ -1,12 +1,11 @@
-<div class="bg-neutral-800 w-full p-6 border border-neutral-700 rounded-md">
+<div class="bg-base-200 w-full p-6 border border-base-300 rounded-md">
   <div class="flex flex-row space-x-5 items-center">
     <div class="basis-10/12">
-      <sl-icon name="house-door-fill" class="mr-2 text-xl"></sl-icon>
       {{ cinemaRoomItem.name }}
     </div>
     <div class="flex flex-row space-x-2">
-      <sl-button type="button" variant="primary" outline>Manage</sl-button>
-      <sl-button type="button" variant="danger" outline>Delete</sl-button>
+      <button class="btn btn-outline btn-info" type="button">Manage</button>
+      <button class="btn btn-outline btn-error" type="button">Delete</button>
     </div>
   </div>
 </div>
