--- a/projects/app/src/app/cinemas-page/new-cinema-block/new-cinema-block.component.css
+++ b/projects/app/src/app/cinemas-page/new-cinema-block/new-cinema-block.component.css
@@ -1,12 +1,12 @@
 div.default-style {
-    @apply transition-all duration-300 text-gray-500 rounded-md;
+    @apply transition-all bg-base-200 duration-300 rounded-md;
     border-width: 1px;
 }
 
 /** with add-item class */
 
 div.add-new-item {
-    @apply border-gray-500 border-dashed cursor-pointer
+    @apply border-gray-500 border-dashed text-gray-500 cursor-pointer
 }
 
 div.add-new-item:hover {
