--- a/projects/app/src/styles.css
+++ b/projects/app/src/styles.css
@@ -2,7 +2,7 @@
 
 /* input.form-input {
   @apply px-3 py-1.5 text-inherit
-        bg-neutral-900
+        bg-base-100
         rounded border border-solid border-gray-700
         transition ease-in-out
         focus:border-sky-500 focus:ring-sky-500 focus:ring-opacity-50 focus:ring-2 focus:outline-none;
@@ -10,4 +10,4 @@
 
 input.ng-invalid.ng-touched:focus {
   @apply border-rose-500 ring-rose-500 ring-2 ring-opacity-50;
-} */
+}  */
