--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -1,29 +1,33 @@
-<nav class="bg-black py-1">
-  <div class="container mx-auto px-5 flex flex-wrap justify-between items-center">
-    <span class="flex-none text-xl text-white font-semibold">
-      <a routerLink="/">Gala Web</a>
-    </span>
-
-    <!-- Button toggle -->
-    <button type="button"
-            class="items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-            (click)="showMobileMenuHandler($event)">
-      <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd"
-              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-              clip-rule="evenodd">
-        </path>
-      </svg>
-    </button>
-
-    <!-- Nav menu items -->
-    <div class="w-full md:block md:w-auto"
-    [ngClass]="{hidden: !isMobileMenuShown}">
-      <ul class="flex flex-col mt-4 md:flex-row md:space-x-5 md:mt-0">
-        <app-navbar-menu-item [isActive]="true" routePath="/movies">Home</app-navbar-menu-item>
-        <app-navbar-menu-item [isActive]="false" routePath="/movies">Movies</app-navbar-menu-item>
-        <app-navbar-menu-item [isActive]="false" routePath="/cinemas">Cinemas</app-navbar-menu-item>
-      </ul>
+<div class="navbar bg-neutral">
+  <div class="navbar-start">
+    <div class="dropdown">
+      <label for="my-drawer-3" class="btn btn-ghost md:hidden">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-5 w-5"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M4 6h16M4 12h8m-8 6h16"
+          />
+        </svg>
+      </label>
     </div>
+    <a class="btn btn-ghost normal-case text-xl" routerLink="/">Gala Web</a>
   </div>
-</nav>
+  <div class="navbar-center hidden md:flex">
+    <ul class="menu menu-horizontal p-0">
+      <li><a routerLink="/movies">Movies</a></li>
+      <li><a routerLink="/cinemas">Cinemas</a></li>
+    </ul>
+  </div>
+
+  <div class="navbar-end">
+    <app-navbar-theme-toggle></app-navbar-theme-toggle>
+  </div>
+</div>
