updated style and functionality on cinema pages

--- a/projects/app/src/app/cinemas-page/cinema-room-item/cinema-room-item.component.html
+++ b/projects/app/src/app/cinemas-page/cinema-room-item/cinema-room-item.component.html
@@ -4,7 +4,7 @@
       {{ cinemaRoomItem.name }}
     </div>
     <div class="flex flex-row space-x-2">
-      <button class="btn btn-outline btn-info" type="button">Manage</button>
+      <button class="btn btn-outline btn-primary" type="button">Manage</button>
       <button class="btn btn-outline btn-error" type="button">Delete</button>
     </div>
   </div>
