--- a/projects/app/src/app/cinemas-page/new-cinema-block/new-cinema-block.component.html
+++ b/projects/app/src/app/cinemas-page/new-cinema-block/new-cinema-block.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="space-x-2">
           <button
-            class="btn btn-info flex-none"
+            class="btn btn-primary flex-none"
             type="submit"
             variant="primary"
           >
