--- a/projects/app/src/app/cinemas-page/new-cinema-room-block/new-cinema-room-block.component.html
+++ b/projects/app/src/app/cinemas-page/new-cinema-room-block/new-cinema-room-block.component.html
@@ -26,7 +26,7 @@
           />
         </div>
         <div class="space-x-2">
-          <button class="btn btn-info flex-none" type="submit">Add</button>
+          <button class="btn btn-primary flex-none" type="submit">Add</button>
           <button
             class="btn btn-error flex-none"
             type="button"
