--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-neutral">
+<div class="navbar bg-base-200">
   <div class="navbar-start">
     <div class="dropdown">
       <label for="my-drawer-3" class="btn btn-ghost md:hidden">
