--- a/projects/app/src/app/cinemas-page/cinema-item/cinema-item.component.html
+++ b/projects/app/src/app/cinemas-page/cinema-item/cinema-item.component.html
@@ -4,7 +4,7 @@
       {{ cinemaItem.name }}
     </div>
     <div class="flex flex-row space-x-2">
-      <button class="btn btn-outline btn-info" type="button" (click)="manageHandler()">Manage</button>
+      <button class="btn btn-outline btn-primary" type="button" (click)="manageHandler()">Manage</button>
       <button class="btn btn-outline btn-error" type="button">Delete</button>
     </div>
   </div>
