update search movie component styles

--- a/projects/app/src/app/manage-movie/manage-movie.component.html
+++ b/projects/app/src/app/manage-movie/manage-movie.component.html
@@ -1,9 +1,7 @@
 <h1 class="text-3xl">Manage Movie</h1>
 
-<div class="container mx-auto py-10">
-  <sl-button (click)="onSearch()">Search Movie</sl-button>
-  <sl-button>Edit Movie</sl-button>
-  <sl-button>Delete Movie</sl-button>
+<div class="w-full py-10">
+  <button class="btn btn-primary" (click)="onSearch()">Search Movie</button>
 </div>
 
 <!-- Display selected movies -->
