--- a/projects/app/src/app/manage-movie/movie-item/movie-item.component.html
+++ b/projects/app/src/app/manage-movie/movie-item/movie-item.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-neutral-900 shadow shadow-black rounded-md container overflow-hidden hover:bg-neutral-800/20 transition"
+  class="bg-base-200 shadow shadow-neutral-focus rounded-md overflow-hidden hover:bg-base-300/20 transition"
 >
   <div class="flex flex-row">
     <img
