--- a/projects/app/src/app/manage-movie/search-movie-item/search-movie-item.component.html
+++ b/projects/app/src/app/manage-movie/search-movie-item/search-movie-item.component.html
@@ -1,43 +1,30 @@
 <div
-  class="bg-neutral-900 shadow shadow-black rounded-md container overflow-hidden hover:bg-neutral-800/20 transition"
+  class="card sm:card-side bg-base-200 shadow shadow-neutral rounded-md overflow-hidden hover:bg-base-300/20 transition"
 >
-  <div class="flex flex-row">
+  <figure class="sm:w-40 h-60 w-full flex-none overflow-hidden">
     <img
-      class="object-cover w-40 h-60 flex-none"
+      class="object-cover w-full h-full"
       src="{{ cardImageUrl }}"
       alt="{{ resultItem.title }}"
     />
-    <div class="flex-grow p-5">
-      <div class="flex flex-row">
-        <div class="flex-grow">
-          <p class="text-2xl font-semibold">{{ resultItem.title }}</p>
-          <p class="text-sm items-center">
-            <sl-icon name="calendar3"></sl-icon> {{ resultItem.release_date }}
-          </p>
-        </div>
-        <sl-button
-          class="justify-self-end"
-          slot="footer"
-          variant="success"
-          outline
-          (click)="onAddMovie()"
-          *ngIf=!isMovieAdded>
-        <sl-icon slot="prefix" name="plus"></sl-icon>
-          <span class="uppercase">Add Movie</span>
-        </sl-button>
-        <sl-button
-          class="justify-self-end"
-          slot="footer"
-          variant="success"
-          disabled
-          *ngIf=isMovieAdded>
-        <sl-icon slot="prefix" name="check"></sl-icon>
-          <span class="uppercase">Added</span>
-        </sl-button>
-      </div>
-      <p class="text-neutral-400 text-sm pt-5">
-        {{ resultItem.overview }}
-      </p>
+  </figure>
+  <div class="card-body p-5">
+    <h2 class="card-title">{{ resultItem.title }}</h2>
+    <p class="text-sm">{{ resultItem.release_date }}</p>
+    <p class="text-sm">
+      {{ resultItem.overview }}
+    </p>
+    <div class="card-actions justify-end">
+      <button
+        class="btn btn-success btn-outline"
+        (click)="onAddMovie()"
+        *ngIf="!isMovieAdded"
+      >
+        + Add Movie
+      </button>
+      <button class="btn btn-success btn-disabled" *ngIf="isMovieAdded">
+        Added
+      </button>
     </div>
   </div>
 </div>
