--- a/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
+++ b/projects/app/src/app/manage-movie/search-movie/search-movie.component.html
@@ -1,18 +1,6 @@
 <h1 class="text-3xl">Search Movie</h1>
-<div class="bg-black my-10 p-5 rounded-md">
-  <form [formGroup]="searchForm" (ngSubmit)="onSearchMovie()">
-    <div class="flex flex-row items-center space-x-2">
-      <input
-        type="text"
-        class="form-input flex-grow"
-        formControlName="movieTitle"
-        id="movieTitle"
-        placeholder="Movie Title"
-      />
-      <sl-button type="submit" variant="primary">Get Info</sl-button>
-    </div>
-  </form>
-</div>
+
+<app-search-movie-form></app-search-movie-form>
 
 <!-- Display Results -->
 <div
