--- a/projects/app/src/styles.css
+++ b/projects/app/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+.card figure {
+  align-items: unset;
+}
+
 /* input.form-input {
   @apply px-3 py-1.5 text-inherit
         bg-base-100
