adjusted pagination and fixed bug on theme toggle

--- a/projects/app/src/app/manage-movie/search-movie-item/search-movie-item.component.html
+++ b/projects/app/src/app/manage-movie/search-movie-item/search-movie-item.component.html
@@ -10,8 +10,8 @@
   </figure>
   <div class="card-body p-5">
     <h2 class="card-title">{{ resultItem.title }}</h2>
-    <p class="text-sm">{{ resultItem.release_date }}</p>
-    <p class="text-sm">
+    <p class="text-xs">{{ resultItem.release_date }}</p>
+    <p class="text-xs">
       {{ resultItem.overview }}
     </p>
     <div class="card-actions justify-end">
